--- a/css/style.css
+++ b/css/style.css
@@ -1289,5 +1289,10 @@ input[type="text"] {
 .js .animate-box {
   opacity: 0;
 }
-
+#fh5co-header{
+  background-image: url(img/cover.jpg);
+    height: 537px;
+    background-position: center !important;
+    background-repeat: no-repeat;
+}
 /*# sourceMappingURL=style.css.map */
