--- a/css/style.css
+++ b/css/style.css
@@ -1294,5 +1294,6 @@ input[type="text"] {
     height: 537px;
     background-position: center !important;
     background-repeat: no-repeat;
+   background-position: right 0px bottom;
 }
 /*# sourceMappingURL=style.css.map */
