--- a/css/style.css
+++ b/css/style.css
@@ -1289,7 +1289,7 @@ input[type="text"] {
 .js .animate-box {
   opacity: 0;
 }
-.fh5co-cover{
+.fh5co-cover, #fh5co-header{
   background-image: url(img/cover.jpg);
     height: 537px;
     background-position: center !important;
